made changes based on comments  Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="game">
     <header>
       <h1>Memory Game</h1>
-      <p class="moves">Moves: <span id="number-moves">0</span></p>
+      <p>Moves: <span id="number-moves">0</span></p>
+      <p>Time: <span id="time">0</span></p>
       <div><p id="rate-stars"> &#9733; &#9733; &#9733; &#9733; &#9733;</p></div>
       <div><button id="reset">Reset</button></div>
     </header>
@@ -21,9 +22,9 @@
         <img class="front-face" src="img/icons8-avocado-96.png" alt="avocado">
         </div>
         <div class="memory-card" data-frame="avocado">
-            <img class="back-face" src="img/icons8-star-96.png" alt="star">
-            <img class="front-face" src="img/icons8-avocado-96.png" alt="avocado">
-            </div>
+          <img class="back-face" src="img/icons8-star-96.png" alt="star">
+          <img class="front-face" src="img/icons8-avocado-96.png" alt="avocado">
+        </div>
         
         <div class="memory-card" data-frame="banana">
           <img class="back-face" src="img/icons8-star-96.png"
